# Personal-Data-Dashboard

./: AGENTS.md  App.tsx  README.md  i18n.ts  index.css  index.html  layout.ts  metadata.json  package-lock.json  package.json  refresh.ts  store.ts  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
.codex/skills/ui-ux-pro-max/: SKILL.md
.codex/skills/ui-ux-pro-max/agents/: openai.yaml
.github/workflows/: desktop-ci.yml
components/: CardHistoryDialog.tsx  CreationWizard.tsx  Dashboard.tsx  Diagnostics.tsx  GroupManagementCenter.tsx  RecycleBin.tsx  Settings.tsx  Sidebar.tsx
components/cards/: GaugeCard.tsx  ScalarCard.tsx  SeriesCard.tsx  StatusCard.tsx
components/ui/: Button.tsx  CardShell.tsx
docs/: 产品需求文档 (PRD).md  脚本数据协议与示例.md  项目续建计划.md
scripts/: sync-readme-version.mjs
services/: alerts.test.ts  alerts.ts  dashboard-columns.test.ts  diagnostics.test.ts  diagnostics.ts  execution.test.ts  execution.ts  group-batch-actions.test.ts  group-management.test.ts  interaction-sound.test.ts  interaction-sound.ts  layout.test.ts  mockData.ts  move-card.test.ts  notification.ts  storage.test.ts  storage.ts  threshold-alert-persistence.test.ts  update-card-layout.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
test/: README.md  gauge_ok.py
